<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PantallaPrincipal">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbPopular"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="@color/azulTbFragment"
        android:minHeight="?attr/actionBarSize"
        android:textAlignment="center"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:title="@string/popular"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Body1"
        app:titleTextColor="@color/letraTbPrincipal" />

    <ImageView
        android:id="@+id/imagenPopular1"
        android:layout_width="130dp"
        android:layout_height="150dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/txtViewPopular1"
        app:layout_constraintEnd_toStartOf="@+id/imagenPopular2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbModa"
        app:srcCompat="@drawable/sudadera1" />

    <TextView
        android:id="@+id/txtViewPopular1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="1dp"
        android:text="@string/sudaderaAzul"
        app:layout_constraintBottom_toTopOf="@+id/txtViewPrecioPopular1"
        app:layout_constraintEnd_toStartOf="@+id/txtViewPrecioPopular1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtViewPrecioPopular1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="23.55€"
        app:layout_constraintBottom_toTopOf="@+id/imagenPopular3"
        app:layout_constraintEnd_toStartOf="@+id/txtViewPrecioSudadera2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtViewPrecioPopular3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="67.56€"
        app:layout_constraintBottom_toTopOf="@+id/imagenPopular5"
        app:layout_constraintEnd_toStartOf="@+id/txtPrecioPopular4"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtViewPopular3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="1dp"
        android:text="@string/pantalonAnchos"
        app:layout_constraintBottom_toTopOf="@+id/txtViewPrecioPopular3"
        app:layout_constraintEnd_toStartOf="@+id/txtViewPopular4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imagenPopular5"
        android:layout_width="130dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="99dp"
        app:layout_constraintBottom_toTopOf="@+id/txtViewPopular5"
        app:layout_constraintEnd_toStartOf="@+id/imagenPopular6"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/zapatillas1" />

    <ImageView
        android:id="@+id/imagenPopular6"
        android:layout_width="130dp"
        android:layout_height="150dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/txtViewInfoPopular6"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/camiseta1" />

    <TextView
        android:id="@+id/txtViewInfoPopular6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:text="@string/camisetaRunning"
        app:layout_constraintBottom_toTopOf="@+id/txtViewPrecioPopular6"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtViewPrecioPopular6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="40dp"
        android:text="69.99€"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtViewPopular5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="1dp"
        android:text="@string/zapatillasRunning"
        app:layout_constraintBottom_toTopOf="@+id/txtViewPrecioPopular5"
        app:layout_constraintEnd_toStartOf="@+id/txtViewInfoPopular6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtViewPrecioPopular5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="40dp"
        android:text="135.00€"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtViewPrecioPopular6"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imagenPopular2"
        android:layout_width="130dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintBottom_toTopOf="@+id/txtViewPopular2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbPopular"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/torre1" />

    <TextView
        android:id="@+id/txtViewPopular2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="1dp"
        android:text="@string/coolpcR7"
        app:layout_constraintBottom_toTopOf="@+id/txtViewPrecioPopular2"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtViewPrecioPopular2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="12dp"
        android:text="1500.00€"
        app:layout_constraintBottom_toTopOf="@+id/imagenPopular3"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imagenPopular3"
        android:layout_width="130dp"
        android:layout_height="150dp"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/txtViewPopular3"
        app:layout_constraintEnd_toStartOf="@+id/imagenPopular4"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/pantalon3" />

    <ImageView
        android:id="@+id/imagenPopular4"
        android:layout_width="130dp"
        android:layout_height="150dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/txtViewPopular4"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/jersey3" />

    <TextView
        android:id="@+id/txtViewPopular4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="1dp"
        android:text="@string/jerseyPunto"
        app:layout_constraintBottom_toTopOf="@+id/txtPrecioPopular4"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtPrecioPopular4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="12dp"
        android:text="89.00€"
        app:layout_constraintBottom_toTopOf="@+id/imagenPopular6"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>